Minor enhancements to quickstart guide

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,8 +59,7 @@ exclude =
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
-# `pip install gt4py[PDF]` like:
-# PDF = ReportLab; RXP
+# `pip install gt4py[cuda90]` like:
 # Add here test requirements (semicolon/line-separated)
 cuda =
     cupy
