--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,41 @@
 # Read more under https://tox.readthedocs.org/
 
 [tox]
-envlist = py36,py37
+envlist = py36-cuda,py37-cuda
 
 [testenv]
 commands_pre = python setup.py install_gt_sources
 commands = pytest -v {posargs}
+passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH
 whitelist_externals = make
                       /bin/bash
                       gcc
                       g++
                       ldd
+
+[testenv:py36-cpu]
+commands = pytest -v -k "not requires_gpu and not requires_cudatoolkit" {posargs}
+
+[testenv:py37-cpu]
+commands = pytest -v -k "not requires_gpu and not requires_cudatoolkit" {posargs}
+
+[testenv:py36-cuda]
+extras = cuda
+
+[testenv:py37-cuda]
+extras = cuda
+
+[testenv:py36-cuda101]
+extras = cuda101
+
+[testenv:py37-cuda100]
+extras = cuda100
+
+[testenv:py37-cuda92]
+extras = cuda92
+
+[testenv:py37-cuda91]
+extras = cuda91
+
+[testenv:py37-cuda90]
+extras = cuda90
