Fix tox tests (#5)
Fix errors and improve the tox configuration for testing. Minor fixes for import cycles

--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,24 @@
 # Read more under https://tox.readthedocs.org/
 
 [tox]
-envlist = py36,py37
+envlist = py{36,37}-{cpu,cuda,cuda90,cuda91,cuda92,cuda100,cuda101}
 
 [testenv]
 commands_pre = python setup.py install_gt_sources
-commands = pytest -v {posargs}
+commands =
+    cpu: pytest -v -k "not requires_gpu and not requires_cudatoolkit" {posargs}
+    !cpu: pytest -v {posargs}
+passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH
 whitelist_externals = make
                       /bin/bash
                       gcc
                       g++
                       ldd
+extras =
+    cuda: cuda
+    cuda90: cuda90
+    cuda91: cuda91
+    cuda92: cuda92
+    cuda100: cuda100
+    cuda101: cuda101
+
