dace working from sdfg with added iir meta info.

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,6 @@ install_requires =
     numpy~=1.15
     pybind11~=2.4
     pytest~=4.3.0
-
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 
@@ -71,6 +70,10 @@ cuda100 =
     cupy-cuda100
 cuda101 =
     cupy-cuda101
+dace =
+    scikit-build
+    cmake==3.13
+    dace@git+https://github.com/spcl/dace.git
 testing =
     tox~=3.14
 
