--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@
 envlist = py{36,37}-{cpu,cuda,cuda90,cuda91,cuda92,cuda100,cuda101}
 
 [testenv]
+install_command = python -m pip install --no-cache-dir {opts} {packages}
 commands_pre = python setup.py install_gt_sources
 commands =
     cpu: pytest -v -k "not requires_gpu and not requires_cudatoolkit" {posargs}
