Updated versions of dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,13 +41,13 @@ python_requires = >= 3.6
 setup_requires =
     setuptools_scm
 install_requires =
-    attrs>=19
-    black>=19.3b0
-    hypothesis>=4.14
-    jinja2>=2.10
-    numpy>=1.14
-    pybind11>=2.2.3
-    pytest>=4.3.0
+    attrs~=19.1
+    black~=19.3b0
+    hypothesis>=4.14,<=4.37.0
+    jinja2~=2.10
+    numpy~=1.15
+    pybind11~=2.4
+    pytest~=4.3.0
 
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
@@ -74,7 +74,7 @@ cuda100 =
 cuda101 =
     cupy-cuda101
 testing =
-    pytest
+    tox~=3.14
 
 [test]
 # py.test options when running `python setup.py test`
