--- a/tox.ini
+++ b/tox.ini
@@ -6,13 +6,16 @@ envlist = py{36,37}-{cpu,cuda,cuda90,cuda91,cuda92,cuda100,cuda101}
 
 [testenv]
 install_command = python -m pip install --no-cache-dir {opts} {packages}
-commands_pre = python -m gt4py.gt_src_manager install
+commands_pre =
+    python -m gt4py.gt_src_manager install
+    rm -Rf .gt_cache
 commands =
     cpu: pytest -v -k "not requires_gpu and not requires_cudatoolkit" {posargs}
     !cpu: pytest -v {posargs}
 passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH
 whitelist_externals = make
                       /bin/bash
+                      /bin/rm
                       gcc
                       g++
                       ldd
