--- a/tox.ini
+++ b/tox.ini
@@ -6,16 +6,24 @@ envlist = py{36,37}-{cpu,cuda,cuda90,cuda91,cuda92,cuda100,cuda101}
 
 [testenv]
 install_command = python -m pip install --no-cache-dir {opts} {packages}
-commands_pre = python -m gt4py.gt_src_manager install
+
+commands_pre =
+    python -m gt4py.gt_src_manager install
+    bash -c 'find . -type d -a \( -name .gt_cache -o -name .hypothesis -o -name .pytest_cache \) -print0 | xargs -0 rm -Rf'
+
 commands =
     cpu: pytest -v -k "not requires_gpu and not requires_cudatoolkit" {posargs}
     !cpu: pytest -v {posargs}
+
 passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH
-whitelist_externals = make
-                      /bin/bash
-                      gcc
-                      g++
-                      ldd
+
+whitelist_externals =
+    /bin/bash
+    make
+    gcc
+    g++
+    ldd
+
 extras =
     cuda: cuda
     cuda90: cuda90
@@ -23,4 +31,3 @@ extras =
     cuda92: cuda92
     cuda100: cuda100
     cuda101: cuda101
-
