added *.sdfg and _dotgraph to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ _local_
 ### GridTools ####
 src/gt4py/_external_src/gridtools
 .gt_cache/
+
+### DaCe ###
+*.sdfg
+_dotgraphs
 .dacecache/
 
 ### Python ###
