--- a/src/gt4py/backend/templates/stencil_module.py.in
+++ b/src/gt4py/backend/templates/stencil_module.py.in
@@ -124,7 +124,7 @@ class {{ class_name }}(StencilObject):
         # assert that all required values have been provided
 
 {%- filter indent(width=8) %}
-{{ synchronization }}
+{{ pre_run }}
 {%- endfilter %}
 
         self._call_run(
@@ -136,8 +136,9 @@ class {{ class_name }}(StencilObject):
         )
 
 {%- filter indent(width=8) %}
-{{ mark_modified }}
+{{ post_run }}
 {%- endfilter %}
+
         if exec_info is not None:
             exec_info["call_end_time"] = time.perf_counter()
 
