--- a/src/gt4py/backend/templates/stencil_module.py.in
+++ b/src/gt4py/backend/templates/stencil_module.py.in
@@ -121,3 +121,5 @@ class {{ class_name }}(StencilObject):
 {%- filter indent(width=8) %}
 {{- implementation }}
 {%- endfilter %}
+        if exec_info is not None:
+            exec_info["run_end_time"] = time.perf_counter()
