--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,9 @@
 # Read more under https://tox.readthedocs.org/
 
 [tox]
-envlist = py{36,37,38}-{cpu,cuda,cuda90,cuda91,cuda92,cuda100,cuda101}
+envlist =
+    py{36,37,38}-{cpu,cuda,cuda90,cuda91,cuda92,cuda100,cuda101}
+    py{36,37,38}-dawn-{cpu,cuda,cuda90,cuda91,cuda92,cuda100,cuda101}
 
 [testenv]
 install_command = python -m pip install --no-cache-dir {opts} {packages}
@@ -31,3 +33,4 @@ extras =
     cuda92: cuda92
     cuda100: cuda100
     cuda101: cuda101
+    dawn: dawn
