Add tox config for dawn

--- a/tox.ini
+++ b/tox.ini
@@ -2,14 +2,15 @@
 # Read more under https://tox.readthedocs.org/
 
 [tox]
-envlist = py{36,37}-{cpu,cuda,cuda90,cuda91,cuda92,cuda100,cuda101}
+envlist =
+    py{36,37}-{cpu,cuda,cuda90,cuda91,cuda92,cuda100,cuda101}
+    py{36,37}-dawn-{cpu,cuda,cuda90,cuda91,cuda92,cuda100,cuda101}
 
 [testenv]
 install_command = python -m pip install --no-cache-dir {opts} {packages}
 
 commands_pre =
     python -m gt4py.gt_src_manager install
-    bash -c 'find . -type d -a \( -name .gt_cache -o -name .hypothesis -o -name .pytest_cache \) -print0 | xargs -0 rm -Rf'
 
 commands =
     cpu: pytest -v -k "not requires_gpu and not requires_cudatoolkit" {posargs}
@@ -31,3 +32,4 @@ extras =
     cuda92: cuda92
     cuda100: cuda100
     cuda101: cuda101
+    dawn: dawn
