--- a/.github/workflows/gt4py-tox.yml
+++ b/.github/workflows/gt4py-tox.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7]
-        tox-env-tag: ["-dawn-", "-"]
+        tox-env-tag: [-dawn-, -]
 
     steps:
     - uses: actions/checkout@v2
