--- a/.github/workflows/gt4py-tox.yml
+++ b/.github/workflows/gt4py-tox.yml
@@ -39,5 +39,6 @@ jobs:
       run: |
         pyversion_no_dot="${{ matrix.python-version }}"
         pyversion_no_dot="${pyversion_no_dot/./}"
+        tox_tag="${{ matrix.tox-env-tag }}"
         pip install tox
-        tox -r -e py${pyversion_no_dot}${tox-env-tag}cpu
+        tox -r -e py${pyversion_no_dot}${tox_tag}cpu
