--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ install_requires =
     numpy~=1.15
     pybind11~=2.4
     pytest~=4.3.0
+    click~=7.1.1
 
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
