add empty command with entry point and tests.

--- a/setup.cfg
+++ b/setup.cfg
@@ -75,6 +75,11 @@ cuda101 =
 testing =
     tox~=3.14
 
+[options.entry_points]
+# CLI entry points to be installed
+console_scripts =
+   gtpyc = gt4py.cli:gtpyc
+
 [test]
 # py.test options when running `python setup.py test`
 # addopts = --verbose
