Put pruning of empty stages and other nodes in separate pass, reverted change on templates and instead don't generate pyext for empty computations.

--- a/src/gt4py/backend/templates/computation.hpp.in
+++ b/src/gt4py/backend/templates/computation.hpp.in
@@ -49,7 +49,7 @@ namespace gt = ::gridtools;
 
 namespace {{ stencil_unique_name }} {
 
-std::array<double, 2> run(const std::array<gt::uint_t, 3>& domain,
+void run(const std::array<gt::uint_t, 3>& domain,
 {%- set comma = joiner(", ") %}
 {%- for field in arg_fields -%}
          {{- comma() }}
