--- a/src/gt4py/backend/templates/stencil_module.py.in
+++ b/src/gt4py/backend/templates/stencil_module.py.in
@@ -39,6 +39,32 @@ from gt4py.stencil_object import AccessKind, Boundary, DomainInfo, FieldInfo, Pa
 {{ module_members }}
 
 class {{ class_name }}(StencilObject):
+    """
+    {{ docstring | indent(4)}}
+
+    Default Parameters
+    ------------------
+    domain : `Sequence` of `int`, optional
+        Shape of the computation domain. If `None`, it will be used the
+        largest feasible domain according to the provided input fields
+        and origin values (`None` by default).
+
+    origin :  `[int * ndims]` or `{'field_name': [int * ndims]}`, optional
+        If a single offset is passed, it will be used for all fields.
+        If a `dict` is passed, there could be an entry for each field.
+        A special key *'_all_'* will represent the value to be used for all
+        the fields not explicitly defined. If `None` is passed or it is
+        not possible to assign a value to some field according to the
+        previous rule, the value will be inferred from the global boundaries
+        of the field. Note that the function checks if the origin values
+        are at least equal to the `global_border` attribute of that field,
+        so a 0-based origin will only be acceptable for fields with
+        a 0-area support region.
+
+    exec_info : `dict`, optional
+        Dictionary used to store information about the stencil execution.
+        (`None` by default).
+    """
 
 {%- filter indent(width=4) %}
 {{- class_members }}
