--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ install_requires =
     pybind11~=2.4
     pytest~=4.3.0
     click~=7.1.1
+    cached-property~=1.5.1
 
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
