--- a/src/gt4py/backend/templates/stencil_module.py.in
+++ b/src/gt4py/backend/templates/stencil_module.py.in
@@ -138,6 +138,9 @@ class {{ class_name }}(StencilObject):
 {%- filter indent(width=8) %}
 {{ mark_modified }}
 {%- endfilter %}
+        if exec_info is not None:
+            exec_info["call_end_time"] = time.perf_counter()
+
     def run(self, _domain_, _origin_, exec_info, *, {{- field_names|join(", ") -}}, {{- param_names|join(", ") -}}):
         if exec_info is not None:
             exec_info["domain"] = _domain_
@@ -146,3 +149,5 @@ class {{ class_name }}(StencilObject):
 {%- filter indent(width=8) %}
 {{- implementation }}
 {%- endfilter %}
+        if exec_info is not None:
+            exec_info["run_end_time"] = time.perf_counter()
