--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ name = gt4py
 description = GT4Py: GridTools for Python
 author = ETH Zurich
 author-email = enriqueg@cscs.ch
+description = Python API to develop performance portable applications for weather and climate
 license = gpl3
 license_files = LICENSE.txt
 long-description = file: README.rst
@@ -19,7 +20,7 @@ platforms = Linux, Mac
 
 # From: https://pypi.python.org/pypi?%3Aaction=list_classifiers
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     Intended Audience :: Science/Research
     License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
     Operating System :: POSIX
