add flake8 and mypy to pre-commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -94,6 +94,7 @@ build_dir = build/sphinx
 
 [flake8]
 # Some sane defaults for the code style checker flake8
+max-line-length = 99
 exclude =
     .tox
     build
@@ -101,3 +102,6 @@ exclude =
     .eggs
     docs/conf.py
 
+[mypy]
+follow_imports = skip
+ignore_missing_imports = True
