--- a/setup.cfg
+++ b/setup.cfg
@@ -91,6 +91,7 @@ testpaths = tests
 [build_sphinx]
 source_dir = docs
 build_dir = build/sphinx
+warning-is-error = True
 
 [flake8]
 # Some sane defaults for the code style checker flake8
