--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,10 @@
+default_language_version:
+    python: python3.6
 repos:
 -   repo: https://github.com/psf/black
     rev: stable
     hooks:
     - id: black
-      language_version: python3.6
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.780
@@ -38,7 +39,6 @@ repos:
     rev: 3.8.2
     hooks:
     - id: flake8
-      language_version: python3.6
       exclude: >
           (?x)^(
           setup.py |
