rename stages, add more checkers, add py38 target for black, sort gitignore

--- a/.github/workflows/gt4py-precommit.yml
+++ b/.github/workflows/gt4py-precommit.yml
@@ -1,4 +1,4 @@
-name: Formatting & compliance (pre-commit)
+name: Formatting & compliance
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  build:
+  pre-commit:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
