--- a/setup.cfg
+++ b/setup.cfg
@@ -41,12 +41,12 @@ include_package_data = True
 python_requires = >= 3.6
 install_requires =
     attrs~=19.1
-    black~=19.3b0
-    hypothesis>=4.14,<=4.37.0
+    black>=19.3b0
+    hypothesis>=4.14
     jinja2~=2.10
     numpy~=1.15
     pybind11~=2.4
-    pytest~=4.3.0
+    pytest~=5.2
 
 [options.packages.find]
 where = src
