--- a/setup.cfg
+++ b/setup.cfg
@@ -41,15 +41,12 @@ include_package_data = True
 python_requires = >= 3.6
 install_requires =
     attrs~=19.1
-    black~=19.3b0
-    hypothesis>=4.14,<=4.37.0
+    black>=19.3b0
+    hypothesis>=4.14
     jinja2~=2.10
     numpy~=1.15
     pybind11~=2.4
-    pytest~=4.3.0
-
-# The usage of test_requires is discouraged, see `Dependency Management` docs
-# tests_require = pytest; pytest-cov
+    pytest~=5.2
 
 [options.packages.find]
 where = src
@@ -71,6 +68,8 @@ cuda100 =
     cupy-cuda100
 cuda101 =
     cupy-cuda101
+dawn =
+    dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git#subdirectory=dawn
 testing =
     tox~=3.14
 
@@ -104,5 +103,5 @@ exclude =
     docs/conf.py
 
 [mypy]
-follow_imports = skip
+follow_imports = silent
 ignore_missing_imports = True
