fix some list issues and make warnings fail the github build

--- a/.github/workflows/gt4py-sphinx.yml
+++ b/.github/workflows/gt4py-sphinx.yml
@@ -23,4 +23,4 @@ jobs:
         python -m pip install .
     - name: Build documentation
       run: |
-        cd docs && SPHINXOPTS=-W make html
+        cd docs && SPHINXOPTS=-W make -e html
