--- a/.github/workflows/gt4py-sphinx.yml
+++ b/.github/workflows/gt4py-sphinx.yml
@@ -17,7 +17,8 @@ jobs:
       uses: actions/setup-python@v1
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip sphinx sphinx_rtd_theme
+        python -m pip install --upgrade pip
+        python -m pip install -r requirements-dev.txt
     - name: Install package
       run: |
         python -m pip install .
