Add compiler env vars to tox

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands =
     cpu: pytest -v -k "not requires_gpu and not requires_cudatoolkit" {posargs}
     !cpu: pytest -v {posargs}
 
-passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH
+passenv = BOOST_ROOT BOOST_HOME CUDA_HOME CUDA_PATH CXX CC
 
 whitelist_externals =
     /bin/bash
