--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ install_requires =
     numpy~=1.15
     pybind11~=2.4
     pytest~=5.2
+    tabulate~=0.8
 
 [options.packages.find]
 where = src
@@ -72,6 +73,11 @@ dawn =
     dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git#subdirectory=dawn
 testing =
     tox~=3.14
+
+[options.entry_points]
+# CLI entry points to be installed
+console_scripts =
+    gtpyc = gt4py.cli:gtpyc
 
 [test]
 # py.test options when running `python setup.py test`
