Dawn Integration Part 2 (#47)
Final integration with the Dawn compiler including implementations of the various Dawn backends for CPU and GPU.

Co-authored-by: Johann Dahm <johann.dahm@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = gt4py 
+name = gt4py
 author = ETH Zurich
 author-email = enriqueg@cscs.ch
 description = Python API to develop performance portable applications for weather and climate
@@ -71,7 +71,7 @@ cuda100 =
 cuda101 =
     cupy-cuda101
 dawn =
-    dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git#subdirectory=dawn
+    dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git@0.0.2#subdirectory=dawn
 testing =
     tox~=3.14
 
