--- a/src/gt4py/backend/templates/dawn_computation.src.in
+++ b/src/gt4py/backend/templates/dawn_computation.src.in
@@ -17,7 +17,7 @@
  ---- Template variables ----
 
     - arg_fields: [{ "name": str}]
-    - dawn_backend: str
+    - dawn_namespace: str
     - gt_backend: str
     - header_file: str
     - parameters: [{ "name": str, "dtype": str }]
@@ -41,6 +41,7 @@ using backend_t = DAWN_GT_BACKEND;
 #include "_dawn_{{ stencil_short_name }}.hpp"
 
 #include <array>
+#include <initializer_list>
 #include <cassert>
 #include <stdexcept>
 
@@ -48,10 +49,27 @@ namespace {{ stencil_unique_name }} {
 
 namespace {
 
+std::array<gt::uint_t, 3> get_min_origin(
+    const std::initializer_list<const std::array<gt::uint_t, 3>>& origins) {
+    std::array<gt::uint_t, 3> min_origin = *origins.begin();
+    for(const auto& origin : origins) {
+        for(int i = 0; i < 3; ++i) {
+            if(origin[i] < min_origin[i])
+                min_origin[i] = origin[i];
+        }
+    }
+    return min_origin;
+}
 
-gridtools::dawn::domain make_domain(const std::array<gt::uint_t, 3> &size) {
+gridtools::dawn::domain make_domain(const std::array<gt::uint_t, 3> &in_size,
+                                    const std::array<gt::uint_t, 3> &min_origin) {
+    std::array<gt::uint_t, 3> size;
+    for (int i = 0; i < 3; ++i) {
+      size[i] = in_size[i] + 2 * min_origin[i];
+    }
+
     gridtools::dawn::domain d{size};
-    d.set_halos(0, 0, 0, 0, 0, 0);
+    d.set_halos(min_origin[0], min_origin[0], min_origin[1], min_origin[1], min_origin[2], min_origin[2]);
     return d;
 }
 
@@ -74,17 +92,6 @@ data_store_t make_data_store(const BufferInfo& bi,
                                  " != " + std::to_string(3) + "]");
     }
 
-{#
-    for (int i = 0; i < 2 /*3*/; ++i) {
-        if (origin[i] < halo_size_i)
-            throw std::runtime_error(
-                "Origin too small");
-        if (origin[i] + halo_size_i + compute_domain_shape[i] < bi.shape[i])
-            throw std::runtime_error(
-                "Given shape and origin exceed buffer dimension");
-    }
-#}
-
     // ptr, dims and strides are "outer domain" (i.e., compute domain + halo
     // region). The halo region is only defined through `make_grid` (and
     // currently, in the storage info)
@@ -93,7 +100,6 @@ data_store_t make_data_store(const BufferInfo& bi,
     double* ptr = static_cast<double*>(bi.ptr);
     for (int i = 0; i < 3; ++i) {
         strides[i] = bi.strides[i] / sizeof(double);
-        ptr += strides[i] * origin[i];
         dims[i] = compute_domain_shape[i]+2*origin[i];
     }
     return data_store_t{storage_info_t{dims, strides}, ptr,
@@ -119,17 +125,24 @@ void run(const std::array<gt::uint_t, 3>& domain,
          {{ param.dtype }} {{ param.name }}
 {%- endfor %})
 {
-    // Initialize data stores from input buffers
-{%- for field in arg_fields %}
-    auto ds_{{ field.name }} = make_data_store<double>(bi_{{ field.name }}, domain, {{ field.name }}_origin);
-{%- endfor %}
+    // Compute min origin
+    std::array<gt::uint_t, 3> min_origin = get_min_origin({
+{%- for field in arg_fields -%}
+         {{ field.name }}_origin {{ comma() if not loop.last }}
+{%- endfor -%}
+    });
 
-    // create computation
-    dawn_generated::{{ dawn_backend }}::{{ stencil_short_name }} computation{make_domain(domain)};
+    // Create computation
+    dawn_generated::{{ dawn_namespace }}::{{ stencil_short_name }} computation{make_domain(domain, min_origin)};
 
     // Update global parameters
 {%- for param in parameters %}
     computation.set_{{ param.name }}({{ param.name }});
+{%- endfor %}
+
+    // Initialize data stores from input buffers
+{%- for field in arg_fields %}
+    auto ds_{{ field.name }} = make_data_store<double>(bi_{{ field.name }}, domain, {{ field.name }}_origin);
 {%- endfor %}
 
     // Run computation and wait for the synchronization of the output stores
@@ -138,7 +151,7 @@ void run(const std::array<gt::uint_t, 3>& domain,
 {%- for field in arg_fields -%}
         {{ comma() }}ds_{{ field.name }}
 {%- endfor %});
-        // computation_.sync_bound_data_stores();
+    // computation_.sync_bound_data_stores();
 }
 
 }  // namespace {{ stencil_unique_name }}
