--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ install_requires =
     pybind11~=2.4
     pytest~=5.2
     tabulate~=0.8
+    typing-extensions~=3.7
     click~=7.1
 
 [options.packages.find]
@@ -102,6 +103,7 @@ warning-is-error = True
 [flake8]
 # Some sane defaults for the code style checker flake8
 max-line-length = 99
+ignore = N802,W503
 exclude =
     .tox
     build
@@ -122,7 +124,7 @@ lines_after_imports = 2
 default_section = THIRDPARTY
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = gt4py,__externals__,__gtscript__
-known_third_party = attr,black,click,dawn4py,hypothesis,jinja2,numpy,pkg_resources,pybind11,pytest,setuptools,tabulate
+known_third_party = attr,black,click,dawn4py,hypothesis,jinja2,numpy,pkg_resources,pybind11,pytest,setuptools,tabulate,typing_extensions
 
 [mypy]
 follow_imports = silent
