--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -56,8 +56,10 @@
 
 #include <array>
 #include <cassert>
-#include <cmath>
 #include <stdexcept>
+{%- if gt_backend != "cuda" %}
+#include <cmath>
+{%- endif %}
 
 namespace {{ stencil_unique_name }} {
 
