Add stage extents to GT backends

--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -42,6 +42,7 @@
             ]
         }
     }
+    - stage_extents: { str: str }
     - stencil_unique_name: str
     - tmp_fields: [{ "name": str, "dtype": str }]
 #}
@@ -256,7 +257,7 @@ void run(const std::array<gt::uint_t, 3>& domain,
         {%- for stage in step %}
             {%- filter indent(width=extra_indent) %}
             {{- stage_comma() }}
-            gt::make_stage<{{ stage }}_func>(
+            gt::make_stage_with_extent<{{ stage }}_func, gt::extent<{{ stage_extents[stage] }}>>(
                 p_{{ stage_functors[stage].args|map(attribute="name")|join("(), p_")}}()
             )
             {%- endfilter %}
