Ignore division by zero warning

--- a/src/gt4py/backend/templates/stencil_module.py.in
+++ b/src/gt4py/backend/templates/stencil_module.py.in
@@ -150,7 +150,8 @@ class {{ class_name }}(StencilObject):
             exec_info["domain"] = _domain_
             exec_info["origin"] = _origin_
             exec_info["run_start_time"] = time.perf_counter()
-{%- filter indent(width=8) %}
+        with np.errstate(divide='ignore'):
+{%- filter indent(width=12) %}
 {{- implementation }}
 {%- endfilter %}
         if exec_info is not None:
