--- a/setup.cfg
+++ b/setup.cfg
@@ -109,6 +109,21 @@ exclude =
     .eggs
     docs/conf.py
 
+[tool:isort]
+skip_glob =
+    *.venv/**
+    _local/**
+line_length = 99
+force_grid_wrap = 0
+include_trailing_comma = true
+multi_line_output = 3
+use_parentheses = true
+lines_after_imports = 2
+default_section = THIRDPARTY
+sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+known_first_party = gt4py,__externals__,__gtscript__
+known_third_party = attr,black,click,dawn4py,hypothesis,jinja2,numpy,pkg_resources,pybind11,pytest,setuptools,tabulate
+
 [mypy]
 follow_imports = silent
 ignore_missing_imports = True
