--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,34 +6,16 @@ repos:
     hooks:
     - id: black
 
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.780
+-   repo: https://github.com/asottile/seed-isort-config
+    rev: v2.2.0
     hooks:
-    - id: mypy
-      exclude:
-          (?x)^(
-          docs/conf.py |
-          src/gt4py/analysis/infos.py |
-          src/gt4py/analysis/passes.py |
-          src/gt4py/analysis/transformer.py |
-          src/gt4py/backend/dawn_backends.py |
-          src/gt4py/backend/debug_backend.py |
-          src/gt4py/backend/gt_backends.py |
-          src/gt4py/backend/numpy_backend.py |
-          src/gt4py/backend/pyext_builder.py |
-          src/gt4py/backend/python_generator.py |
-          src/gt4py/frontend/gtscript_frontend.py |
-          src/gt4py/ir/nodes.py |
-          src/gt4py/ir/utils.py |
-          src/gt4py/stencil_object.py |
-          src/gt4py/utils/meta.py |
-          tests/definitions.py |
-          tests/test_integration/stencil_definitions.py |
-          tests/test_integration/test_code_generation.py |
-          tests/test_unittest/test_call_interface.py |
-          tests/test_unittest/test_gtscript_frontend.py |
-          tests/test_unittest/test_storage.py |
-          )$
+    - id: seed-isort-config
+      args: ["--application-directories=src:tests"]
+
+-   repo: https://github.com/pre-commit/mirrors-isort
+    rev: v5.1.0
+    hooks:
+    - id: isort
 
 -   repo: https://gitlab.com/PyCQA/flake8
     rev: 3.8.2
@@ -89,6 +71,35 @@ repos:
           tests/test_integration/test_cpp_regression.py |
           tests/test_integration/test_suites.py |
           tests/test_integration/utils.py |
+          tests/test_unittest/test_call_interface.py |
+          tests/test_unittest/test_gtscript_frontend.py |
+          tests/test_unittest/test_storage.py |
+          )$
+
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.780
+    hooks:
+    - id: mypy
+      exclude:
+          (?x)^(
+          docs/conf.py |
+          src/gt4py/analysis/infos.py |
+          src/gt4py/analysis/passes.py |
+          src/gt4py/analysis/transformer.py |
+          src/gt4py/backend/dawn_backends.py |
+          src/gt4py/backend/debug_backend.py |
+          src/gt4py/backend/gt_backends.py |
+          src/gt4py/backend/numpy_backend.py |
+          src/gt4py/backend/pyext_builder.py |
+          src/gt4py/backend/python_generator.py |
+          src/gt4py/frontend/gtscript_frontend.py |
+          src/gt4py/ir/nodes.py |
+          src/gt4py/ir/utils.py |
+          src/gt4py/stencil_object.py |
+          src/gt4py/utils/meta.py |
+          tests/definitions.py |
+          tests/test_integration/stencil_definitions.py |
+          tests/test_integration/test_code_generation.py |
           tests/test_unittest/test_call_interface.py |
           tests/test_unittest/test_gtscript_frontend.py |
           tests/test_unittest/test_storage.py |
