--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,10 +12,10 @@ repos:
     - id: seed-isort-config
       args: ["--application-directories=src:tests"]
 
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.1.0
-    hooks:
-    - id: isort
+#-   repo: https://github.com/pre-commit/mirrors-isort
+#    rev: v5.1.0
+#    hooks:
+#    - id: isort
 
 -   repo: https://gitlab.com/PyCQA/flake8
     rev: 3.8.2
