Add missing suggestions from #134

--- a/setup.cfg
+++ b/setup.cfg
@@ -103,7 +103,9 @@ warning-is-error = True
 [flake8]
 # Some sane defaults for the code style checker flake8
 max-line-length = 99
-ignore = N802,W503
+ignore =
+    N802  # function name should be lowercase
+    W503  # line break occurred before a binary operator
 exclude =
     .tox
     build
